"""
系统控制器 - 系统生命周期管理
"""
from typing import Optional, Dict, Any
from enum import Enum
from ..utils.logger_config import get_logger

class SystemState(Enum):
    """系统状态枚举"""
    STOPPED = "stopped"
    STARTING = "starting"
    RUNNING = "running"
    PAUSING = "pausing"
    PAUSED = "paused"
    STOPPING = "stopping"
    ERROR = "error"

class SystemController:
    """
    系统控制器类
    
    职责：
    - 系统启动停止
    - 系统状态管理
    - 系统暂停恢复
    - 健康状态监控
    
    依赖：
    - SystemState: 系统状态枚举
    - HealthMonitor: 健康监控器
    - Logger: 日志记录
    
    原则：
    - 专注系统控制
    - 状态管理清晰
    - 无业务逻辑
    """
    
    def __init__(self):
        self.system_state: SystemState = SystemState.STOPPED
        self.health_monitor: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def start_system(self) -> bool:
        """启动系统"""
        pass
    
    def stop_system(self) -> bool:
        """停止系统"""
        pass
    
    def pause_system(self) -> bool:
        """暂停系统"""
        pass
    
    def resume_system(self) -> bool:
        """恢复系统"""
        pass
    
    def get_system_status(self) -> Dict[str, Any]:
        """获取系统状态"""
        pass
