"""
交易编排器 - 业务流程协调
"""
from typing import Optional
from ..domain.market_analysis_service import MarketAnalysisService
from ..domain.option_trading_service import OptionTradingService
from ..domain.risk_management_service import RiskManagementService
from ..utils.logger_config import get_logger

class TradingOrchestrator:
    """
    交易编排器类
    
    职责：
    - 业务流程编排
    - 服务协调管理
    - 业务异常处理
    - 系统健康监控
    
    依赖：
    - MarketAnalysisService: 市场分析服务
    - OptionTradingService: 期权交易服务
    - RiskManagementService: 风险管理服务
    - Logger: 日志记录
    
    原则：
    - 无状态设计
    - 不包含业务逻辑
    - 纯流程编排
    """
    
    def __init__(self):
        self.market_service: Optional[MarketAnalysisService] = None
        self.option_service: Optional[OptionTradingService] = None
        self.risk_service: Optional[RiskManagementService] = None
        self.logger = get_logger(__name__)
    
    def orchestrate_trading_workflow(self) -> None:
        """编排交易工作流程"""
        pass
    
    def coordinate_services(self) -> None:
        """协调各个服务"""
        pass
    
    def handle_business_exceptions(self, exception: Exception) -> None:
        """处理业务异常"""
        pass
    
    def monitor_system_health(self) -> bool:
        """监控系统健康状态"""
        pass
