"""
配置管理器 - 系统配置管理和验证
"""
from typing import Optional, Dict, Any
from ..utils.logger_config import get_logger

class ConfigurationManager:
    """
    配置管理器类
    
    职责：
    - 交易参数配置
    - 系统环境配置  
    - 风险阈值配置
    - 配置验证管理
    
    依赖：
    - ConfigData: 配置数据
    - ValidationRules: 验证规则
    - Logger: 日志记录
    
    原则：
    - 配置驱动设计
    - 环境分离
    - 参数验证
    - 热更新支持
    """
    
    def __init__(self):
        self.config_data: Optional[Dict[str, Any]] = None
        self.validation_rules: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def load_configuration(self) -> Dict[str, Any]:
        """加载配置"""
        pass
    
    def get_trading_config(self) -> Dict[str, Any]:
        """获取交易配置"""
        pass
    
    def get_risk_config(self) -> Dict[str, Any]:
        """获取风险配置"""
        pass
    
    def validate_config(self) -> bool:
        """验证配置"""
        pass
