"""
市场分析服务 - 核心市场分析业务逻辑
"""
from typing import Optional, Dict, Any, List
from ..infrastructure.data_access_layer import DataAccessLayer
from ..engines.technical_analysis_engine import TechnicalAnalysisEngine
from ..config.configuration_manager import ConfigurationManager
from ..models.trading_models import MarketData, TradingSignal
from ..utils.logger_config import get_logger

class MarketAnalysisService:
    """
    市场分析服务类
    
    职责：
    - 市场状况分析
    - 交易机会识别
    - 市场信号生成
    - 市场波动评估
    
    依赖：
    - DataAccessLayer: 数据访问层
    - TechnicalAnalysisEngine: 技术分析引擎
    - ConfigurationManager: 配置管理
    - Logger: 日志记录
    
    原则：
    - 领域业务逻辑完整性
    - 高内聚设计
    - 无技术细节
    """
    
    def __init__(self):
        self.data_access: Optional[DataAccessLayer] = None
        self.technical_engine: Optional[TechnicalAnalysisEngine] = None
        self.config: Optional[ConfigurationManager] = None
        self.logger = get_logger(__name__)
    
    def analyze_market_conditions(self) -> Dict[str, Any]:
        """分析市场状况"""
        pass
    
    def detect_trading_opportunities(self) -> List[Dict[str, Any]]:
        """检测交易机会"""
        pass
    
    def generate_market_signals(self) -> List[TradingSignal]:
        """生成市场信号"""
        pass
    
    def assess_market_volatility(self) -> float:
        """评估市场波动性"""
        pass
