"""
Greeks计算引擎 - Black-Scholes模型和Greeks计算
"""
from typing import Optional
from ..models.trading_models import OptionTickData, GreeksData
from ..utils.logger_config import get_logger

class GreeksCalculationEngine:
    """
    Greeks计算引擎类
    
    职责：
    - Black-Scholes期权定价模型
    - Greeks实时计算
    - 隐含波动率计算
    - 期权理论价值计算
    
    依赖：
    - ModelParameters: 模型参数
    - BlackScholesCalculator: BS计算器
    - Logger: 日志记录
    
    原则：
    - 纯函数设计
    - 高精度计算
    - 无副作用
    - 数学模型封装
    """
    
    def __init__(self):
        self.model_params: Optional[object] = None
        self.calculator: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def calculate_all_greeks(self, option_data: OptionTickData, underlying_price: float, 
                           risk_free_rate: float, volatility: float) -> GreeksData:
        """计算所有Greeks"""
        pass
    
    def calculate_delta(self, S: float, K: float, T: float, r: float, sigma: float, option_type: str) -> float:
        """计算Delta"""
        pass
    
    def calculate_gamma(self, S: float, K: float, T: float, r: float, sigma: float) -> float:
        """计算Gamma"""
        pass
    
    def calculate_theta(self, S: float, K: float, T: float, r: float, sigma: float, option_type: str) -> float:
        """计算Theta"""
        pass
    
    def calculate_vega(self, S: float, K: float, T: float, r: float, sigma: float) -> float:
        """计算Vega"""
        pass
    
    def calculate_implied_volatility(self, option_price: float, S: float, K: float, T: float, 
                                   r: float, option_type: str) -> float:
        """计算隐含波动率"""
        pass
