"""
技术分析引擎 - 技术指标计算和信号生成
"""
from typing import Optional, List, Dict, Any
from ..models.trading_models import MarketData, TradingSignal
from ..utils.logger_config import get_logger

class TechnicalAnalysisEngine:
    """
    技术分析引擎类
    
    职责：
    - 技术指标计算
    - 交易信号生成
    - 趋势分析算法
    - 模式识别检测
    
    依赖：
    - IndicatorsConfig: 指标配置
    - SignalGenerator: 信号生成器
    - Logger: 日志记录
    
    原则：
    - 算法封装设计
    - 高性能计算
    - 纯函数实现
    - 可扩展架构
    """
    
    def __init__(self):
        self.indicators_config: Optional[object] = None
        self.signal_generator: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def calculate_technical_indicators(self, market_data: List[MarketData]) -> Dict[str, float]:
        """计算技术指标"""
        pass
    
    def generate_trading_signals(self, indicators: Dict[str, float]) -> List[TradingSignal]:
        """生成交易信号"""
        pass
    
    def analyze_trends(self, price_data: List[float]) -> Dict[str, Any]:
        """分析趋势"""
        pass
    
    def detect_patterns(self, market_data: List[MarketData]) -> List[Dict[str, Any]]:
        """检测模式"""
        pass
