"""
日志工具 - 日志记录和性能监控
"""
from typing import Optional, Dict, Any
import logging

class LoggingUtility:
    """
    日志工具类
    
    职责：
    - 日志记录管理
    - 错误追踪处理
    - 性能监控记录
    - 日志格式配置
    
    依赖：
    - LogConfig: 日志配置
    - Formatters: 格式化器
    
    原则：
    - 无状态设计
    - 可插拔架构
    - 性能优化
    - 横向工具支持
    """
    
    def __init__(self):
        self.log_config: Optional[Dict[str, Any]] = None
        self.formatters: Optional[Dict[str, logging.Formatter]] = None
    
    def get_logger(self, name: str) -> logging.Logger:
        """获取日志记录器"""
        pass
    
    def setup_logging(self, level: str = "INFO", log_file: str = None) -> None:
        """设置日志配置"""
        pass
    
    def log_performance(self, operation: str, duration: float) -> None:
        """记录性能日志"""
        pass
    
    def log_errors(self, error: Exception, context: str) -> None:
        """记录错误日志"""
        pass
